src/style.css
@font-face {
    font-family: 'PT_Sans custom';
    font-weight: 400;
    src: url("src/PT_Sans/PTSans-Regular.ttf") format("truetype");
}

.hello-world {
    font-family: 'PT_Sans custom';
}

body {
    /* padding: 2em; */
    /* background-color: hsl(0, 64%, 45%); */
    background-color: hsl(354, 80%, 46%);
    /* background-color: hsl(0, 0%, 17%); */
    -webkit-user-select: none;
    user-select: none;
    cursor: default;
    margin: 0;
    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
    height: 100vh;
    /* overflow: hidden; */
}

.title-bar {
    /* background-color: hsl(0, 0%, 17%); */
    /* background-color: hsl(0, 64%, 40%); */
    border-bottom: 1px solid hsl(0, 64%, 40%);
    color: hsla(0, 0%, 100%, 0.531);
    text-align: center;
    font-size: 12px;
    /* padding: 0.5em; */
    height: 2.5em;
    /* font-family: 'PT_Sans custom'; */
    font-weight: bold;
    display: flex;
    align-items: center;
    justify-content: center;
}

/* .black::after {
    content: "";
    position: absolute;
    width: 2em;
    right: -1em;
    top: 0;
    bottom: 0;
    background-color: hsl(0, 0%, 0%);
} */
.white.key {
    background-color: white;
}

.widget-container {
    background-color: black;
    padding: 8px;
    margin: 30px auto;
    width: fit-content;
    border-radius: 10px;
    color: white;
}

h2 {
    border-bottom: 2px solid gray;
    margin-top: 0;
    padding-bottom: 5px;
}

.piano {
    display: flex;
    flex-direction: row;
    justify-content: center;
    width: fit-content;
    /* overflow: hidden; */
}

.key {
    border-bottom-left-radius: 2px;
    border-bottom-right-radius: 2px;
    display: flex;
    flex-direction: column;
    justify-content: flex-end;
    align-items: center;
    color: gray;

    width: 2em;
    height: 10em;
    margin: 1px;

    /* Transition height */
    transition: height 0.1s ease-in-out;
}

.pressed.white.key {
  background-color: hsl(0, 0%, 76%);
  height: 9.8em;
}

.pressed.black.key {
    background-color: hsl(0, 0%, 29%);
    height: 7.8em;
}

.pressed {
    /* dissable transition for snappyness */
    transition: none;
    /* width: 1.8em; */
    /* margin: 0.1em; */
}

.key-parent {
    margin: 0px;
    padding: 0;
    /* height: 50em; */
}

.key-parent.white {
    /* margin: 1px; */
}

.key-parent.black {
    position: relative;
    width: 0;
}

.key.black {
    position: absolute;
    width: 2em;
    right: -1em;
    top: 0;
    /* bottom: 0; */
    background-color: black;
    height: 8em;
}

kbd {
    font-family: inherit;
    /* border-radius: 2px;
    color: hsl(0, 0%, 14%);
    background-color: hsl(0, 0%, 55%);
    border: 1px solid hsl(0, 0%, 25%);
    box-shadow: 0 2px 0 1px hsl(0, 0%, 25%);
    cursor: default;
    line-height: 1;
    font-size: 0.75rem;
    min-width: 0.75rem;
    text-align: center;
    padding: 2px 5px;
    position: relative;
    top: -1px; */
    width: 100%;
    text-align: center;
    /* background-color: hsla(0, 0%, 50%, 0.5); */
    /* border-radius: 2px; */
    height: 1.5em;
}

/* .white kbd {
    background-color: hsl(0, 0%, 95%);
    border: 1px solid hsl(0, 0%, 75%);
    box-shadow: 0 2px 0 1px hsl(0, 0%, 75%);
} */

/* .white.key-parent:nth-child(odd of .white.key-parent) {
    background-color: hsl(0, 64%, 35%);
}  */

.widget-container:has(.midi_player) {
    width: 986px;
}

svg {
    width: 100%;
    height: 100%;
}

.svg-container {
    overflow-y: scroll;
    width: 100%;
}

